fixing overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@
   --font-secondary: "Source Sans 3", sans-serif;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--font-secondary);
   color: var(--text-dark);
